Major bot improvements: Add full Update Match functionality, clean up README
- Implement complete Update Match feature with field-by-field editing
- Auto-updates HTML files, events.json, and index.html cards
- Add auto-integration for Add Match (copies HTML, updates JSON/index automatically)
- Update README.md: Remove deployment bloat, focus on project essentials
- Fix all 4 original bot issues (Update, Delete, Generate Card, Stats)
- Add comprehensive documentation (AUTO-INTEGRATION.md, FIXES-APPLIED.md)
- All bot features now fully automatic with minimal manual steps
- User only needs to upload images and git push

Bot now features complete CRUD operations with automatic file management.

--- a/dmca.html
+++ b/dmca.html
@@ -133,7 +133,7 @@
 
             <div class="contact-box">
                 <p><strong>DMCA Contact:</strong></p>
-                <p>Email: <a href="mailto:copyright@footholics.example">copyright@footholics.example</a></p>
+                <p>Email: <a href="mailto:footholicsin@gmail.com">footholicsin@gmail.com</a></p>
                 <p>Subject Line: "DMCA Takedown Request"</p>
             </div>
 
