--- a/privacy.html
+++ b/privacy.html
@@ -117,7 +117,7 @@
             <p>We may update this policy periodically. Changes will be posted on this page with an updated date.</p>
 
             <h2>9. Contact</h2>
-            <p>For privacy concerns, contact us at: <a href="mailto:privacy@footholics.example">privacy@footholics.example</a></p>
+            <p>For privacy concerns, contact us at: <a href="mailto:footholicsin@gmail.com">footholicsin@gmail.com</a></p>
 
             <a href="index.html" class="back-btn">← Back to Home</a>
         </article>
