--- a/disclaimer.html
+++ b/disclaimer.html
@@ -150,7 +150,7 @@
             <p>By using this service, you agree to indemnify and hold harmless Foot Holics from any claims arising from your use of the service or violation of these terms.</p>
 
             <h2>10. Contact</h2>
-            <p>For questions about this disclaimer: <a href="mailto:legal@footholics.example">legal@footholics.example</a></p>
+            <p>For questions about this disclaimer: <a href="mailto:footholicsin@gmail.com">footholicsin@gmail.com</a></p>
 
             <a href="index.html" class="back-btn">← Back to Home</a>
         </article>
