--- a/2025-12-10-real-madrid-vs-manchester-city.html
+++ b/2025-12-10-real-madrid-vs-manchester-city.html
@@ -75,13 +75,13 @@
                 </nav>
 
                 <div class="cta-group" id="ctaGroup">
-                    <a href="https://chat.whatsapp.com/KG7DBpC0BKv6bFtlzfOr2T" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">
+                    <a href="https://chat.whatsapp.com/KG7DBpC0BKv6bFtlzfOr2T" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" onclick="return handleAdClick(this);">
                         <svg class="btn-icon" fill="currentColor" viewBox="0 0 24 24">
                             <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/>
                         </svg>
                         WhatsApp
                     </a>
-                    <a href="https://t.me/+XyKdBR9chQpjM2I9" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
+                    <a href="https://t.me/+XyKdBR9chQpjM2I9" target="_blank" rel="noopener noreferrer" class="btn btn-primary" onclick="return handleAdClick(this);">
                         <svg class="btn-icon" fill="currentColor" viewBox="0 0 24 24">
                             <path d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 12 0a12 12 0 0 0-.056 0zm4.962 7.224c.1-.002.321.023.465.14a.506.506 0 0 1 .171.325c.016.093.036.306.02.472-.18 1.898-.962 6.502-1.36 8.627-.168.9-.499 1.201-.82 1.23-.696.065-1.225-.46-1.9-.902-1.056-.693-1.653-1.124-2.678-1.8-1.185-.78-.417-1.21.258-1.91.177-.184 3.247-2.977 3.307-3.23.007-.032.014-.15-.056-.212s-.174-.041-.249-.024c-.106.024-1.793 1.14-5.061 3.345-.48.33-.913.49-1.302.48-.428-.008-1.252-.241-1.865-.44-.752-.245-1.349-.374-1.297-.789.027-.216.325-.437.893-.663 3.498-1.524 5.83-2.529 6.998-3.014 3.332-1.386 4.025-1.627 4.476-1.635z"/>
                         </svg>
@@ -207,7 +207,7 @@
             </p>
 
             <div class="stream-links">
-                <a href="p/1-live.html?match=real-madrid-vs-manchester-city" class="stream-link-card">
+                <a href="p/1-live.html?match=real-madrid-vs-manchester-city" class="stream-link-card" onclick="return handleAdClick(this);">
                     <span class="live-badge">
                         <span class="live-dot"></span>
                         LIVE
@@ -220,7 +220,7 @@
                     <p style="font-size: 0.75rem; color: var(--muted); margin-top: 0.5rem;">Desktop / Mobile</p>
                 </a>
 
-                <a href="p/2-live.html?match=real-madrid-vs-manchester-city" class="stream-link-card">
+                <a href="p/2-live.html?match=real-madrid-vs-manchester-city" class="stream-link-card" onclick="return handleAdClick(this);">
                     <span class="live-badge">
                         <span class="live-dot"></span>
                         LIVE
@@ -233,7 +233,7 @@
                     <p style="font-size: 0.75rem; color: var(--muted); margin-top: 0.5rem;">Desktop / Mobile</p>
                 </a>
 
-                <a href="p/3-live.html?match=real-madrid-vs-manchester-city" class="stream-link-card">
+                <a href="p/3-live.html?match=real-madrid-vs-manchester-city" class="stream-link-card" onclick="return handleAdClick(this);">
                     <span class="stream-link-label">LINK 3</span>
                     <div class="stream-badges">
                         <span class="quality-badge sd">SD</span>
@@ -242,7 +242,7 @@
                     <p style="font-size: 0.75rem; color: var(--muted); margin-top: 0.5rem;">Mobile Optimized</p>
                 </a>
 
-                <a href="p/4-live.html?match=real-madrid-vs-manchester-city" class="stream-link-card">
+                <a href="p/4-live.html?match=real-madrid-vs-manchester-city" class="stream-link-card" onclick="return handleAdClick(this);">
                     <span class="live-badge">
                         <span class="live-dot"></span>
                         LIVE
@@ -266,19 +266,19 @@
         <section class="glass-card mb-4">
             <h3 style="color: var(--accent); margin-bottom: 1rem;">Share This Match</h3>
             <div style="display: flex; gap: 1rem; flex-wrap: wrap;">
-                <a href="https://api.whatsapp.com/send?text=Watch%20Real%20Madrid%20vs%20Manchester%20City%20Live%20-%20https://footholics.example/2025-12-10-real-madrid-vs-manchester-city.html" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="font-size: 0.9rem;">
+                <a href="https://api.whatsapp.com/send?text=Watch%20Real%20Madrid%20vs%20Manchester%20City%20Live%20-%20https://footholics.in/2025-12-10-real-madrid-vs-manchester-city.html" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="font-size: 0.9rem;">
                     💚 WhatsApp
                 </a>
-                <a href="https://www.facebook.com/sharer/sharer.php?u=https://footholics.example/2025-12-10-real-madrid-vs-manchester-city.html" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="font-size: 0.9rem;">
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://footholics.in/2025-12-10-real-madrid-vs-manchester-city.html" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="font-size: 0.9rem;">
                     📘 Facebook
                 </a>
-                <a href="https://twitter.com/intent/tweet?url=https://footholics.example/2025-12-10-real-madrid-vs-manchester-city.html&text=Watch%20Real%20Madrid%20vs%20Manchester%20City%20Live" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="font-size: 0.9rem;">
+                <a href="https://twitter.com/intent/tweet?url=https://footholics.in/2025-12-10-real-madrid-vs-manchester-city.html&text=Watch%20Real%20Madrid%20vs%20Manchester%20City%20Live" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="font-size: 0.9rem;">
                     ✖️ X
                 </a>
-                <a href="https://t.me/share/url?url=https://footholics.example/2025-12-10-real-madrid-vs-manchester-city.html&text=Watch%20Real%20Madrid%20vs%20Manchester%20City%20Live" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="font-size: 0.9rem;">
+                <a href="https://t.me/share/url?url=https://footholics.in/2025-12-10-real-madrid-vs-manchester-city.html&text=Watch%20Real%20Madrid%20vs%20Manchester%20City%20Live" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="font-size: 0.9rem;">
                     ✈️ Telegram
                 </a>
-                <a href="https://discord.com/channels/@me" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="font-size: 0.9rem;" onclick="navigator.clipboard.writeText('Watch Real Madrid vs Manchester City Live - https://footholics.example/2025-12-10-real-madrid-vs-manchester-city.html'); alert('Link copied! Paste it in Discord.'); return false;">
+                <a href="https://discord.com/channels/@me" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="font-size: 0.9rem;" onclick="navigator.clipboard.writeText('Watch Real Madrid vs Manchester City Live - https://footholics.in/2025-12-10-real-madrid-vs-manchester-city.html'); alert('Link copied! Paste it in Discord.'); return false;">
                     💬 Discord
                 </a>
             </div>
@@ -302,7 +302,7 @@
                 All team names, logos, and trademarks are property of their respective owners.
             </p>
             <p style="margin-top: 1rem;">
-                For takedown requests or concerns, contact: <a href="mailto:copyright@footholics.example" style="color: var(--accent);">copyright@footholics.example</a>
+                For takedown requests or concerns, contact: <a href="mailto:footholics.in@gmail.com" style="color: var(--accent);">footholics.in@gmail.com</a>
             </p>
         </div>
     </main>
@@ -326,7 +326,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="#" onclick="document.getElementById('heroSearch').focus(); scrollTo(0, 0); return false;">Search Matches</a></li>
                         <li><a href="/#leagues">Browse Leagues</a></li>
-                        <li><a href="mailto:contact@footholics.example">Contact</a></li>
+                        <li><a href="mailto:footholics.in@gmail.com">Contact</a></li>
                     </ul>
                 </div>
 
