--- a/p/4-live.html
+++ b/p/4-live.html
@@ -31,7 +31,7 @@
                 </a>
 
                 <div class="cta-group">
-                    <a href="javascript:history.back()" class="btn btn-secondary" style="font-size: 0.9rem;">
+                    <a href="javascript:history.back()" class="btn btn-secondary" style="font-size: 0.9rem;" onclick="return handleAdClick(this);">
                         ← Back to Match
                     </a>
                 </div>
