--- a/2025-12-10-real-madrid-vs-manchester-city.html
+++ b/2025-12-10-real-madrid-vs-manchester-city.html
@@ -139,13 +139,13 @@
         <!-- Teams Block -->
         <div class="teams-block">
             <div class="team">
-                <div class="team-crest" style="background: linear-gradient(135deg, #D4AF37 0%, #FFD700 100%);">⚽</div>
+                <img src="assets/img/logos/teams/la-liga/real-madrid.png" alt="Real Madrid" class="team-logo" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
                 <h2 class="team-name">Real Madrid</h2>
                 <p class="text-muted">Home</p>
             </div>
             <div class="vs">VS</div>
             <div class="team">
-                <div class="team-crest" style="background: linear-gradient(135deg, #0EA5E9 0%, #06B6D4 100%);">⚽</div>
+                <img src="assets/img/logos/teams/premier-league/manchester-city.png" alt="Manchester City" class="team-logo" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
                 <h2 class="team-name">Manchester City</h2>
                 <p class="text-muted">Away</p>
             </div>
