Updated team logos and cleaned homepage

--- a/dmca.html
+++ b/dmca.html
@@ -6,7 +6,8 @@
     <meta name="description" content="DMCA and Copyright Policy for Foot Holics">
     <title>DMCA / Copyright - Foot Holics</title>
     <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="icon" type="image/png" href="assets/img/favicon.png">
+    <link rel="icon" type="image/png" href="assets/img/logos/site/logo.png">
+    <link rel="apple-touch-icon" href="assets/img/logos/site/logo.png">
     <style>
         .legal-document {
             max-width: 800px;
