--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     <!-- <link rel="preload" as="image" href="assets/img/hero-bg.jpg"> -->
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="assets/img/favicon.png">
+    <link rel="icon" type="image/png" href="assets/img/logos/site/logo.png">
+    <link rel="apple-touch-icon" href="assets/img/logos/site/logo.png">
 </head>
 <body>
     <!-- Header -->
@@ -42,7 +43,7 @@
         <div class="container">
             <div class="header-inner">
                 <a href="index.html" class="logo">
-                    <div class="logo-icon">⚽</div>
+                    <img src="assets/img/logos/site/logo.png" alt="Foot Holics Logo" class="logo-icon">
                     <span>Foot Holics</span>
                 </a>
 
@@ -130,6 +131,9 @@
                     
 
                                         <!-- Match Card -->
+                                        <!-- Match Card -->
+                    
+
                     <article class="glass-card match-card">
                         <img src="assets/img/real-madrid-manchester-city-poster.jpg" alt="Real Madrid vs Manchester City" class="match-poster" loading="lazy">
                         <div class="match-header">
@@ -333,38 +337,79 @@
     <!-- Interstitial Ad Slot (Triggers on first click) -->
     <div id="interstitial-ad-slot"></div>
 
-    <!-- Banner Ad Slot - Top of Page -->
-    <div id="ad-slot-banner-top" style="text-align: center; margin: 20px auto; max-width: 728px;">
-        <!-- Place Adsterra Banner (728x90) script here -->
+    <!-- Banner Ad Slot - Top of Page (300x250) -->
+    <div id="ad-slot-banner-top" style="text-align: center; margin: 20px auto; max-width: 300px;">
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '66dc201b64275feeae63bc4b419a241c',
+                'format' : 'iframe',
+                'height' : 250,
+                'width' : 300,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//pensivedean.com/66dc201b64275feeae63bc4b419a241c/invoke.js"></script>
     </div>
 
     <!-- Native Banner Ad Slot - After Hero Section -->
     <div id="ad-slot-native-1" style="margin: 30px auto; max-width: 1200px;">
-        <!-- Place Adsterra Native Banner script here -->
+        <script async="async" data-cfasync="false" src="//pensivedean.com/0eafec7e4106026e364203d54ba0c8e9/invoke.js"></script>
+        <div id="container-0eafec7e4106026e364203d54ba0c8e9"></div>
     </div>
 
-    <!-- Sidebar Ad Slot - In Sidebar -->
-    <div id="ad-slot-sidebar-1" style="margin: 20px 0;">
-        <!-- Place Adsterra Square Banner (300x250) script here -->
+    <!-- Sidebar Ad Slot - In Sidebar (300x250) -->
+    <div id="ad-slot-sidebar-1" style="margin: 20px auto; text-align: center; max-width: 300px;">
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '66dc201b64275feeae63bc4b419a241c',
+                'format' : 'iframe',
+                'height' : 250,
+                'width' : 300,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//pensivedean.com/66dc201b64275feeae63bc4b419a241c/invoke.js"></script>
     </div>
 
-    <!-- Between Matches Ad Slot -->
-    <div id="ad-slot-between-matches" style="text-align: center; margin: 30px auto; max-width: 728px;">
-        <!-- Place Adsterra Banner script here -->
+    <!-- Between Matches Ad Slot (300x250) -->
+    <div id="ad-slot-between-matches" style="text-align: center; margin: 30px auto; max-width: 300px;">
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '66dc201b64275feeae63bc4b419a241c',
+                'format' : 'iframe',
+                'height' : 250,
+                'width' : 300,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//pensivedean.com/66dc201b64275feeae63bc4b419a241c/invoke.js"></script>
     </div>
 
-    <!-- Footer Ad Slot - Before Footer -->
-    <div id="ad-slot-footer" style="text-align: center; margin: 30px auto; max-width: 728px;">
-        <!-- Place Adsterra Banner script here -->
+    <!-- Footer Ad Slot - Before Footer (300x250) -->
+    <div id="ad-slot-footer" style="text-align: center; margin: 30px auto; max-width: 300px;">
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '66dc201b64275feeae63bc4b419a241c',
+                'format' : 'iframe',
+                'height' : 250,
+                'width' : 300,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//pensivedean.com/66dc201b64275feeae63bc4b419a241c/invoke.js"></script>
     </div>
 
     <!-- Popunder Ad Slot (Loads in background) -->
     <div id="ad-slot-popunder"></div>
 
+    <!-- Smartlink Ad (Used for outbound links) -->
+    <!-- Smartlink URL: https://pensivedean.com/w5hzdwkr3h?key=bfbd283ffe1573110488645fe30c5cfd -->
+    <!-- This is integrated into external links via JavaScript -->
+
     <!-- Social Bar Ad Slot (Sticky) -->
     <div id="ad-slot-social-bar">
         <!-- Social Bar Ad Script -->
-        <script type="text/javascript" src="//pl28190484.effectivegatecpm.com/ad/f7/17/adf7172d701fdcad288330f7b67c9293.js"></script>
+        <script type="text/javascript" src="//pensivedean.com/ad/f7/17/adf7172d701fdcad288330f7b67c9293.js"></script>
     </div>
 
     <!-- JavaScript -->
@@ -373,6 +418,6 @@
     <!-- Adsterra Scripts Section -->
     <!-- ======================== -->
     <!-- Popunder Ad Script -->
-    <script type="text/javascript" src="//pl28190353.effectivegatecpm.com/52/30/74/5230747febbb777e6e14a3c30aa1fd30.js"></script>
+    <script type="text/javascript" src="//pensivedean.com/98/b2/61/98b2610dbd944ffe41efc4663be4b3ad.js"></script>
 </body>
 </html>
