--- a/p/3-live.html
+++ b/p/3-live.html
@@ -18,7 +18,8 @@
     <link rel="stylesheet" href="../assets/css/main.css">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="../assets/img/favicon.png">
+    <link rel="icon" type="image/png" href="../assets/img/logos/site/logo.png">
+    <link rel="apple-touch-icon" href="../assets/img/logos/site/logo.png">
 </head>
 <body style="background: var(--bg); min-height: 100vh;">
     <!-- Minimal Header -->
@@ -26,7 +27,7 @@
         <div class="container">
             <div class="header-inner">
                 <a href="../index.html" class="logo">
-                    <div class="logo-icon">⚽</div>
+                    <img src="../assets/img/logos/site/logo.png" alt="Foot Holics Logo" class="logo-icon">
                     <span>Foot Holics</span>
                 </a>
 
