--- a/terms.html
+++ b/terms.html
@@ -6,7 +6,8 @@
     <meta name="description" content="Terms and Conditions for Foot Holics">
     <title>Terms & Conditions - Foot Holics</title>
     <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="icon" type="image/png" href="assets/img/favicon.png">
+    <link rel="icon" type="image/png" href="assets/img/logos/site/logo.png">
+    <link rel="apple-touch-icon" href="assets/img/logos/site/logo.png">
     <style>
         .legal-document {
             max-width: 800px;
