Updated team logos and cleaned homepage

--- a/index.html
+++ b/index.html
@@ -331,72 +331,13 @@
     </footer>
 
     <!-- ========================================
-         AD SLOTS FOR ADSTERRA
+         AD SLOTS FOR ADSTERRA (REDUCED)
          ======================================== -->
 
-    <!-- Interstitial Ad Slot (Triggers on first click) -->
-    <div id="interstitial-ad-slot"></div>
-
-    <!-- Banner Ad Slot - Top of Page (300x250) -->
-    <div id="ad-slot-banner-top" style="text-align: center; margin: 20px auto; max-width: 300px;">
-        <script type="text/javascript">
-            atOptions = {
-                'key' : '66dc201b64275feeae63bc4b419a241c',
-                'format' : 'iframe',
-                'height' : 250,
-                'width' : 300,
-                'params' : {}
-            };
-        </script>
-        <script type="text/javascript" src="//pensivedean.com/66dc201b64275feeae63bc4b419a241c/invoke.js"></script>
-    </div>
-
-    <!-- Native Banner Ad Slot - After Hero Section -->
+    <!-- Native Banner Ad Slot - Less intrusive, blends with content -->
     <div id="ad-slot-native-1" style="margin: 30px auto; max-width: 1200px;">
         <script async="async" data-cfasync="false" src="//pensivedean.com/0eafec7e4106026e364203d54ba0c8e9/invoke.js"></script>
         <div id="container-0eafec7e4106026e364203d54ba0c8e9"></div>
-    </div>
-
-    <!-- Sidebar Ad Slot - In Sidebar (300x250) -->
-    <div id="ad-slot-sidebar-1" style="margin: 20px auto; text-align: center; max-width: 300px;">
-        <script type="text/javascript">
-            atOptions = {
-                'key' : '66dc201b64275feeae63bc4b419a241c',
-                'format' : 'iframe',
-                'height' : 250,
-                'width' : 300,
-                'params' : {}
-            };
-        </script>
-        <script type="text/javascript" src="//pensivedean.com/66dc201b64275feeae63bc4b419a241c/invoke.js"></script>
-    </div>
-
-    <!-- Between Matches Ad Slot (300x250) -->
-    <div id="ad-slot-between-matches" style="text-align: center; margin: 30px auto; max-width: 300px;">
-        <script type="text/javascript">
-            atOptions = {
-                'key' : '66dc201b64275feeae63bc4b419a241c',
-                'format' : 'iframe',
-                'height' : 250,
-                'width' : 300,
-                'params' : {}
-            };
-        </script>
-        <script type="text/javascript" src="//pensivedean.com/66dc201b64275feeae63bc4b419a241c/invoke.js"></script>
-    </div>
-
-    <!-- Footer Ad Slot - Before Footer (300x250) -->
-    <div id="ad-slot-footer" style="text-align: center; margin: 30px auto; max-width: 300px;">
-        <script type="text/javascript">
-            atOptions = {
-                'key' : '66dc201b64275feeae63bc4b419a241c',
-                'format' : 'iframe',
-                'height' : 250,
-                'width' : 300,
-                'params' : {}
-            };
-        </script>
-        <script type="text/javascript" src="//pensivedean.com/66dc201b64275feeae63bc4b419a241c/invoke.js"></script>
     </div>
 
     <!-- Popunder Ad Slot (Loads in background) -->
