New changes made

--- a/TEMPLATE-event.html
+++ b/TEMPLATE-event.html
@@ -301,19 +301,19 @@
             <h3 style="color: var(--accent); margin-bottom: 1rem;">Share This Match</h3>
             <div style="display: flex; gap: 1rem; flex-wrap: wrap;">
                 <a href="https://api.whatsapp.com/send?text=Watch%20[HOME]%20vs%20[AWAY]%20Live%20-%20https://footholics.in/[YYYY-MM-DD-team1-vs-team2].html" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="font-size: 0.9rem;">
-                    💚 WhatsApp
+                    <img src="assets/img/logos/site/whatsapp.png" alt="WhatsApp" style="width: 18px; height: 18px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline';"><span style="display:none;">💚</span> WhatsApp
                 </a>
                 <a href="https://www.facebook.com/sharer/sharer.php?u=https://footholics.in/[YYYY-MM-DD-team1-vs-team2].html" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="font-size: 0.9rem;">
-                    📘 Facebook
+                    <img src="assets/img/logos/site/facebook.png" alt="Facebook" style="width: 18px; height: 18px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline';"><span style="display:none;">📘</span> Facebook
                 </a>
                 <a href="https://twitter.com/intent/tweet?url=https://footholics.in/[YYYY-MM-DD-team1-vs-team2].html&text=Watch%20[HOME]%20vs%20[AWAY]%20Live" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="font-size: 0.9rem;">
-                    ✖️ X
+                    <img src="assets/img/logos/site/x.png" alt="X" style="width: 18px; height: 18px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline';"><span style="display:none;">✖️</span> X
                 </a>
                 <a href="https://t.me/share/url?url=https://footholics.in/[YYYY-MM-DD-team1-vs-team2].html&text=Watch%20[HOME]%20vs%20[AWAY]%20Live" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="font-size: 0.9rem;">
-                    ✈️ Telegram
+                    <img src="assets/img/logos/site/telegram.png" alt="Telegram" style="width: 18px; height: 18px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline';"><span style="display:none;">✈️</span> Telegram
                 </a>
                 <a href="https://discord.com/channels/@me" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="font-size: 0.9rem;" onclick="navigator.clipboard.writeText('Watch [HOME] vs [AWAY] Live - https://footholics.in/[YYYY-MM-DD-team1-vs-team2].html'); alert('Link copied! Paste it in Discord.'); return false;">
-                    💬 Discord
+                    <img src="assets/img/logos/site/discord.png" alt="Discord" style="width: 18px; height: 18px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline';"><span style="display:none;">💬</span> Discord
                 </a>
             </div>
         </section>
@@ -377,9 +377,15 @@
                 <div class="footer-section">
                     <h4>Connect With Us</h4>
                     <ul class="footer-links">
-                        <li><a href="https://chat.whatsapp.com/KG7DBpC0BKv6bFtlzfOr2T" target="_blank" rel="noopener noreferrer">WhatsApp Channel</a></li>
-                        <li><a href="https://t.me/+XyKdBR9chQpjM2I9" target="_blank" rel="noopener noreferrer">Telegram</a></li>
-                        <li><a href="https://discord.gg/example" target="_blank" rel="noopener noreferrer">Discord</a></li>
+                        <li><a href="https://chat.whatsapp.com/KG7DBpC0BKv6bFtlzfOr2T" target="_blank" rel="noopener noreferrer">
+                            <img src="assets/img/logos/site/whatsapp.png" alt="WhatsApp" style="width: 16px; height: 16px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none';">WhatsApp Channel
+                        </a></li>
+                        <li><a href="https://t.me/+XyKdBR9chQpjM2I9" target="_blank" rel="noopener noreferrer">
+                            <img src="assets/img/logos/site/telegram.png" alt="Telegram" style="width: 16px; height: 16px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none';">Telegram
+                        </a></li>
+                        <li><a href="https://discord.gg/example" target="_blank" rel="noopener noreferrer">
+                            <img src="assets/img/logos/site/discord.png" alt="Discord" style="width: 16px; height: 16px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none';">Discord
+                        </a></li>
                     </ul>
                 </div>
             </div>
