Add Inter Miami vs Vancouver match

--- a/TEMPLATE-event.html
+++ b/TEMPLATE-event.html
@@ -23,7 +23,7 @@
     <title>[HOME TEAM] vs [AWAY TEAM] - [LEAGUE NAME] Live Stream | Foot Holics</title>
 
     <!-- Canonical -->
-    <link rel="canonical" content="https://footholics.example/[YYYY-MM-DD-team1-vs-team2].html">
+    <link rel="canonical" content="https://footholics.in/[YYYY-MM-DD-team1-vs-team2].html">
 
     <!-- Preconnect to Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -369,7 +369,7 @@
                     <ul class="footer-links">
                         <li><a href="privacy.html">Privacy Policy</a></li>
                         <li><a href="terms.html">Terms & Conditions</a></li>
-                        <li><a href="mailto:copyright@footholics.example">DMCA / Copyright</a></li>
+                        <li><a href="mailto:copyright@footholics.in">DMCA / Copyright</a></li>
                         <li><a href="disclaimer.html">Disclaimer</a></li>
                     </ul>
                 </div>
