Made New Changes

--- a/2025-12-06-inter-miami-vs-vancouver.html
+++ b/2025-12-06-inter-miami-vs-vancouver.html
@@ -140,14 +140,14 @@
         <!-- Teams Block -->
         <div class="teams-block">
             <div class="team">
-                <img src="assets/img/logos/teams/others/inter-miami.png" alt="Inter Miami" class="team-logo" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; box-shadow: 0 4px 6px rgba(0,0,0,0.1);" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                <img src="assets/img/logos/teams/others/inter-miami.png" alt="Inter Miami" class="team-logo" style="width: 100px; height: 100px; border-radius: 50%; object-fit: contain; box-shadow: 0 4px 6px rgba(0,0,0,0.1);" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                 <div class="team-crest" style="background: linear-gradient(135deg, #D4AF37 0%, #FFD700 100%); display: none;">⚽</div>
                 <h2 class="team-name">Inter Miami</h2>
                 <p class="text-muted">Home</p>
             </div>
             <div class="vs">VS</div>
             <div class="team">
-                <img src="assets/img/logos/teams/others/vancouver.png" alt="Vancouver" class="team-logo" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; box-shadow: 0 4px 6px rgba(0,0,0,0.1);" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                <img src="assets/img/logos/teams/others/vancouver.png" alt="Vancouver" class="team-logo" style="width: 100px; height: 100px; border-radius: 50%; object-fit: contain; box-shadow: 0 4px 6px rgba(0,0,0,0.1);" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                 <div class="team-crest" style="background: linear-gradient(135deg, #0EA5E9 0%, #06B6D4 100%); display: none;">⚽</div>
                 <h2 class="team-name">Vancouver</h2>
                 <p class="text-muted">Away</p>
@@ -272,19 +272,19 @@ This will be a first-ever MLS Cup title opportunity for both clubs, with star po
             <h3 style="color: var(--accent); margin-bottom: 1rem;">Share This Match</h3>
             <div style="display: flex; gap: 1rem; flex-wrap: wrap;">
                 <a href="https://api.whatsapp.com/send?text=Watch%20Inter%20Miami%20vs%20Vancouver%20Live%20-%20https://footholics.in/2025-12-06-inter-miami-vs-vancouver.html" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="font-size: 0.9rem;">
-                    <img src="assets/img/logos/site/whatsapp.png" alt="WhatsApp" style="width: 18px; height: 18px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline';"><span style="display:none;">💚</span> WhatsApp
+                    <img src="assets/img/logos/site/whatsapp.png" alt="WhatsApp" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline';"><span style="display:none;">💚</span> WhatsApp
                 </a>
                 <a href="https://www.facebook.com/sharer/sharer.php?u=https://footholics.in/2025-12-06-inter-miami-vs-vancouver.html" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="font-size: 0.9rem;">
-                    <img src="assets/img/logos/site/facebook.png" alt="Facebook" style="width: 18px; height: 18px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline';"><span style="display:none;">📘</span> Facebook
+                    <img src="assets/img/logos/site/facebook.png" alt="Facebook" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline';"><span style="display:none;">📘</span> Facebook
                 </a>
                 <a href="https://twitter.com/intent/tweet?url=https://footholics.in/2025-12-06-inter-miami-vs-vancouver.html&text=Watch%20Inter%20Miami%20vs%20Vancouver%20Live" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="font-size: 0.9rem;">
-                    <img src="assets/img/logos/site/x.png" alt="X" style="width: 18px; height: 18px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline';"><span style="display:none;">✖️</span> X
+                    <img src="assets/img/logos/site/x.png" alt="X" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline';"><span style="display:none;">✖️</span> X
                 </a>
                 <a href="https://t.me/share/url?url=https://footholics.in/2025-12-06-inter-miami-vs-vancouver.html&text=Watch%20Inter%20Miami%20vs%20Vancouver%20Live" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="font-size: 0.9rem;">
-                    <img src="assets/img/logos/site/telegram.png" alt="Telegram" style="width: 18px; height: 18px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline';"><span style="display:none;">✈️</span> Telegram
+                    <img src="assets/img/logos/site/telegram.png" alt="Telegram" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline';"><span style="display:none;">✈️</span> Telegram
                 </a>
                 <a href="https://discord.com/channels/@me" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="font-size: 0.9rem;" onclick="navigator.clipboard.writeText('Watch Inter Miami vs Vancouver Live - https://footholics.in/2025-12-06-inter-miami-vs-vancouver.html'); alert('Link copied! Paste it in Discord.'); return false;">
-                    <img src="assets/img/logos/site/discord.png" alt="Discord" style="width: 18px; height: 18px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline';"><span style="display:none;">💬</span> Discord
+                    <img src="assets/img/logos/site/discord.png" alt="Discord" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline';"><span style="display:none;">💬</span> Discord
                 </a>
             </div>
         </section>
@@ -349,13 +349,13 @@ This will be a first-ever MLS Cup title opportunity for both clubs, with star po
                     <h4>Connect With Us</h4>
                     <ul class="footer-links">
                         <li><a href="https://chat.whatsapp.com/KG7DBpC0BKv6bFtlzfOr2T" target="_blank" rel="noopener noreferrer">
-                            <img src="assets/img/logos/site/whatsapp.png" alt="WhatsApp" style="width: 16px; height: 16px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none';">WhatsApp Channel
+                            <img src="assets/img/logos/site/whatsapp.png" alt="WhatsApp" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none';">WhatsApp Channel
                         </a></li>
                         <li><a href="https://t.me/+XyKdBR9chQpjM2I9" target="_blank" rel="noopener noreferrer">
-                            <img src="assets/img/logos/site/telegram.png" alt="Telegram" style="width: 16px; height: 16px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none';">Telegram
+                            <img src="assets/img/logos/site/telegram.png" alt="Telegram" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none';">Telegram
                         </a></li>
                         <li><a href="https://discord.gg/example" target="_blank" rel="noopener noreferrer">
-                            <img src="assets/img/logos/site/discord.png" alt="Discord" style="width: 16px; height: 16px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none';">Discord
+                            <img src="assets/img/logos/site/discord.png" alt="Discord" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none';">Discord
                         </a></li>
                     </ul>
                 </div>
