--- a/p/4-live.html
+++ b/p/4-live.html
@@ -100,7 +100,7 @@
         <div class="glass-card" style="margin-top: 2rem;">
             <h3 style="color: var(--accent); margin-bottom: 1rem;">🔗 Alternate Stream Links</h3>
             <p class="text-muted mb-3">If this player doesn't work, try one of these alternate links:</p>
-            <div class="alternate-links">
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 1rem;">
                 <a href="1-live.html" class="btn btn-secondary">Link 1 - HD</a>
                 <a href="2-live.html" class="btn btn-secondary">Link 2 - HD</a>
                 <a href="3-live.html" class="btn btn-secondary">Link 3 - SD</a>
@@ -113,13 +113,13 @@
             <p class="text-muted mb-3">Get updates on new streams and match alerts:</p>
             <div style="display: flex; gap: 1rem; flex-wrap: wrap;">
                 <a href="https://chat.whatsapp.com/KG7DBpC0BKv6bFtlzfOr2T" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
-                    📱 WhatsApp Channel
+                    <img src="../assets/img/logos/site/whatsapp.png" alt="WhatsApp" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline';"><span style="display:none;">📱</span> WhatsApp Channel
                 </a>
                 <a href="https://t.me/+XyKdBR9chQpjM2I9" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
-                    ✈️ Telegram Channel
+                    <img src="../assets/img/logos/site/telegram.png" alt="Telegram" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline';"><span style="display:none;">✈️</span> Telegram Channel
                 </a>
                 <a href="https://discord.gg/example" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">
-                    💬 Discord Server
+                    <img src="../assets/img/logos/site/discord.png" alt="Discord" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline';"><span style="display:none;">💬</span> Discord Server
                 </a>
             </div>
         </div>
